[gd_scene load_steps=30 format=3 uid="uid://dn3mip4qjhl7h"]

[ext_resource type="Script" uid="uid://bdpbcpsa5q3gr" path="res://code/creators.gd" id="1_msmke"]
[ext_resource type="Texture2D" uid="uid://26lqvxvaubti" path="res://images/end_cutscene_SKY.png" id="2_i61o6"]
[ext_resource type="Texture2D" uid="uid://di4bjxb32247" path="res://images/end_cutscene_CLOUDS.png" id="3_ajdeb"]
[ext_resource type="Texture2D" uid="uid://cd6ksbrnslbj0" path="res://images/end_cutscene_MAIN.png" id="4_qxa3v"]
[ext_resource type="FontFile" uid="uid://dje7nt7quhun8" path="res://fonts/PressStart2P-Regular.ttf" id="5_u5ej1"]
[ext_resource type="FontFile" uid="uid://vjlkc1a8xeh1" path="res://fonts/Poco.ttf" id="6_l7s2a"]
[ext_resource type="AudioStream" uid="uid://dfgwj2pqombyu" path="res://music/Soundtrack/Plastic Treeてふてふ.wav" id="7_ogk8x"]
[ext_resource type="Theme" uid="uid://3ny4m17to87t" path="res://Default.tres" id="8_scuq5"]
[ext_resource type="AudioStream" uid="uid://b1eap41opp8eb" path="res://music/SFX/ui_press.mp3" id="9_oe7yb"]
[ext_resource type="AudioStream" uid="uid://ch8nwp7nneatp" path="res://music/SFX/ui_hover1.mp3" id="10_1xrmn"]

[sub_resource type="Animation" id="Animation_t77nr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(218, 160)]
}

[sub_resource type="Animation" id="Animation_cetlr"]
resource_name = "move_clouds"
length = 40.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666676, 40.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(218, 160), Vector2(-376.073, 160)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g087m"]
_data = {
&"RESET": SubResource("Animation_t77nr"),
&"move_clouds": SubResource("Animation_cetlr")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_pe36r"]
atlas = ExtResource("4_qxa3v")
region = Rect2(0, 0, 233, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tfvx"]
atlas = ExtResource("4_qxa3v")
region = Rect2(233, 0, 233, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qsuf"]
atlas = ExtResource("4_qxa3v")
region = Rect2(466, 0, 233, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ug0sy"]
atlas = ExtResource("4_qxa3v")
region = Rect2(699, 0, 233, 144)

[sub_resource type="SpriteFrames" id="SpriteFrames_n6f0x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe36r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tfvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qsuf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ug0sy")
}],
"loop": true,
"name": &"new_animation",
"speed": 7.0
}]

[sub_resource type="Animation" id="Animation_5l1e1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1119, 1090)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ColorRect2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Panel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.262932, 0.262932, 0.262932, 1)]
}

[sub_resource type="Animation" id="Animation_n6f0x"]
resource_name = "hide_panel"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.262932, 0.262932, 0.262932, 1), Color(0.26, 0.26, 0.26, 0)]
}

[sub_resource type="Animation" id="Animation_6g583"]
resource_name = "hide_pic"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yq262"]
resource_name = "up"
length = 38.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 37.9667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1119, 1090), Vector2(1119, -2289)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wu85y"]
_data = {
&"RESET": SubResource("Animation_5l1e1"),
&"hide_panel": SubResource("Animation_n6f0x"),
&"hide_pic": SubResource("Animation_6g583"),
&"up": SubResource("Animation_yq262")
}

[sub_resource type="Animation" id="Animation_bsn26"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_wu85y"]
resource_name = "show_btn"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 2.46667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6g583"]
_data = {
&"RESET": SubResource("Animation_bsn26"),
&"show_btn": SubResource("Animation_wu85y")
}

[sub_resource type="Animation" id="Animation_m5655"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_iouhh"]
resource_name = "opening"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cetlr"]
_data = {
&"RESET": SubResource("Animation_m5655"),
&"opening": SubResource("Animation_iouhh")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_msmke")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 218.0
offset_top = 160.0
offset_right = 1416.0
offset_bottom = 900.0
texture = ExtResource("2_i61o6")

[node name="clouds" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 218.0
offset_top = 160.0
offset_right = 2613.0
offset_bottom = 900.0
size_flags_horizontal = 6
texture = ExtResource("3_ajdeb")

[node name="hide R" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1414.0
offset_top = 157.0
offset_right = 1925.0
offset_bottom = 904.0
color = Color(0, 0, 0, 1)

[node name="hide L" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 157.0
offset_right = 218.0
offset_bottom = 904.0
color = Color(0, 0, 0, 1)

[node name="moveClouds" type="AnimationPlayer" parent="."]
root_node = NodePath("../clouds")
libraries = {
&"": SubResource("AnimationLibrary_g087m")
}

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="BoxContainer"]
position = Vector2(816, 529)
scale = Vector2(5.13542, 5.13542)
sprite_frames = SubResource("SpriteFrames_n6f0x")
animation = &"new_animation"
frame_progress = 0.0201252

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Panel" type="Panel" parent="."]
modulate = Color(0.262932, 0.262932, 0.262932, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 117.0
offset_top = -381.0
offset_right = 454.0
offset_bottom = 359.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 159.0
offset_top = 550.0
offset_right = 649.0
offset_bottom = 620.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_u5ej1")
theme_override_font_sizes/font_size = 70
text = "AUTHORS"
horizontal_alignment = 1

[node name="prog" type="Label" parent="Title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = 313.0
offset_right = 135.0
offset_bottom = 436.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_l7s2a")
theme_override_font_sizes/font_size = 50
text = "PROGRAMMING
"
horizontal_alignment = 1

[node name="mg_al" type="Label" parent="Title/prog"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.5
offset_top = 34.5
offset_right = 97.5
offset_bottom = 187.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.921569, 0.870588, 0, 1)
theme_override_fonts/font = ExtResource("6_l7s2a")
theme_override_font_sizes/font_size = 30
text = "Antoni Łapiński

Maksym Gurski
"
horizontal_alignment = 1

[node name="grafika" type="Label" parent="Title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 599.0
offset_right = 80.0
offset_bottom = 659.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_l7s2a")
theme_override_font_sizes/font_size = 50
text = "ART"
horizontal_alignment = 1

[node name="mg" type="Label" parent="Title/grafika"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.5
offset_top = 83.0
offset_right = 94.5
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.921569, 0.870588, 0, 1)
theme_override_fonts/font = ExtResource("6_l7s2a")
theme_override_font_sizes/font_size = 30
text = "Maksym Gurski"
horizontal_alignment = 1

[node name="sound" type="Label" parent="Title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = 826.0
offset_right = 125.0
offset_bottom = 886.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_l7s2a")
theme_override_font_sizes/font_size = 50
text = "SOUNDTRACK"

[node name="ff" type="Label" parent="Title/sound"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = 79.0
offset_right = 60.5
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.921569, 0.870588, 0, 1)
theme_override_fonts/font = ExtResource("6_l7s2a")
theme_override_font_sizes/font_size = 30
text = "Filip Flak"

[node name="test" type="Label" parent="Title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = 1068.0
offset_right = 125.0
offset_bottom = 1128.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_l7s2a")
theme_override_font_sizes/font_size = 50
text = "TESTING"
horizontal_alignment = 1

[node name="tb" type="Label" parent="Title/test"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.5
offset_top = 73.0
offset_right = 115.5
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.921569, 0.870588, 0, 1)
theme_override_fonts/font = ExtResource("6_l7s2a")
theme_override_font_sizes/font_size = 30
text = "Tymoteusz Bielski
"
horizontal_alignment = 1

[node name="test2" type="Label" parent="Title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -167.5
offset_top = 1338.0
offset_right = 167.5
offset_bottom = 1398.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_l7s2a")
theme_override_font_sizes/font_size = 50
text = "ADDITIONAL HELP"
horizontal_alignment = 1

[node name="tb" type="Label" parent="Title/test2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.5
offset_top = 103.0
offset_right = 157.5
offset_bottom = 178.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.921569, 0.870588, 0, 1)
theme_override_fonts/font = ExtResource("6_l7s2a")
theme_override_font_sizes/font_size = 30
text = "Volodya \"Pravetz\" Didur

Tymoteusz Bielski
"
horizontal_alignment = 1

[node name="test3" type="Label" parent="Title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -167.5
offset_top = 1660.0
offset_right = 167.5
offset_bottom = 1720.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_l7s2a")
theme_override_font_sizes/font_size = 50
text = "SOFTWARE USED"
horizontal_alignment = 1

[node name="tb" type="Label" parent="Title/test3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.5
offset_top = 135.0
offset_right = 157.5
offset_bottom = 327.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.921569, 0.870588, 0, 1)
theme_override_fonts/font = ExtResource("6_l7s2a")
theme_override_font_sizes/font_size = 30
text = "Godot Engine

pixilart.com

pixabay.com

Song: Plastic tree - てふてふ"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title"]
libraries = {
&"": SubResource("AnimationLibrary_wu85y")
}

[node name="song" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ogk8x")
autoplay = true

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.0
offset_top = -39.5
offset_right = 169.0
offset_bottom = 39.5
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath(".")
focus_neighbor_bottom = NodePath(".")
theme = ExtResource("8_scuq5")
theme_override_fonts/font = ExtResource("5_u5ej1")
theme_override_font_sizes/font_size = 30
text = "MENU"

[node name="Button_animation" type="AnimationPlayer" parent="Button"]
libraries = {
&"": SubResource("AnimationLibrary_6g583")
}

[node name="press" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_oe7yb")

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_1xrmn")

[node name="cutscene_end" type="Timer" parent="."]
wait_time = 40.0
one_shot = true
autostart = true

[node name="Opener" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cetlr")
}

[connection signal="focus_entered" from="Button" to="." method="_on_button_focus_entered"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="animation_finished" from="Button/Button_animation" to="." method="_on_button_animation_animation_finished"]
[connection signal="timeout" from="cutscene_end" to="." method="_on_cutscene_end_timeout"]
